--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.7",
+    "@astrojs/svelte": "^5.0.1",
     "@astrojs/tailwind": "^5.0.3",
+    "@astrojs/vue": "^4.0.3",
+    "@orama/plugin-astro": "^2.0.0-beta.10",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
     "astro": "^4.0.5",
     "node-fetch": "^3.3.2",
-    "tailwindcss": "^3.3.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "svelte": "^4.2.8",
+    "tailwindcss": "^3.3.6",
+    "vue": "^3.3.11"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
