--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/svelte": "^5.0.1",
     "@astrojs/tailwind": "^5.0.3",
     "@astrojs/vue": "^4.0.3",
+    "@fontsource/amiri": "^5.0.8",
+    "@fontsource/amiri-quran": "^5.0.12",
     "@orama/plugin-astro": "^2.0.0-beta.10",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
