--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.7",
+    "@astrojs/sitemap": "^3.0.3",
     "@astrojs/svelte": "^5.0.1",
     "@astrojs/tailwind": "^5.0.3",
     "@astrojs/vue": "^4.0.3",
+    "@fontsource-variable/lora": "^5.0.9",
+    "@fontsource-variable/montserrat": "^5.0.17",
     "@fontsource/amiri": "^5.0.8",
     "@fontsource/amiri-quran": "^5.0.12",
+    "@fontsource/titillium-web": "^5.0.18",
     "@orama/plugin-astro": "^2.0.0-beta.10",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
