--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/react-dom": "^18.2.17",
     "astro": "^4.0.5",
     "astro-capo": "^0.0.1",
+    "astro-color-scheme": "^1.1.2",
     "astro-critters": "^2.0.11",
+    "astro-iconify": "^1.2.0",
     "astro-imagetools": "^0.9.0",
     "astro-robots-txt": "^1.0.0",
     "node-fetch": "^3.3.2",
