--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "astro-critters": "^2.0.11",
     "astro-iconify": "^1.2.0",
     "astro-imagetools": "^0.9.0",
+    "astro-purgecss": "^4.0.0",
     "astro-robots-txt": "^1.0.0",
+    "astro-seo": "^0.8.0",
     "node-fetch": "^3.3.2",
+    "purgecss": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "svelte": "^4.2.8",
