--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "astro-purgecss": "^4.0.0",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.0",
+    "js-base64": "^3.7.5",
     "node-fetch": "^3.3.2",
     "purgecss": "^5.0.0",
     "react": "^18.2.0",
