--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "purgecss": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.33.1",
     "svelte": "^4.2.8",
     "tailwindcss": "^3.3.6",
     "vue": "^3.3.11"
