--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "node src/scripts/fetchDalilApi.js && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -33,6 +33,7 @@
     "astro-purgecss": "^4.0.0",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.0",
+    "handlebars": "^4.7.8",
     "htmx.org": "^1.9.10",
     "node-fetch": "^3.3.2",
     "purgecss": "^5.0.0",
